<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.seifeldenehab.todo.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/chat_action"
        android:orderInCategory="100"
        android:title="@string/chat"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_chat_black_24dp"

        />

</menu>
